# lunch-lens

./: .gitignore  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
airflow/: Dockerfile  chunk_invoke_text.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: model.py  recipe_crawler_dag.py
airflow/dags/prompts/: categorize_food.yaml
airflow/dags/templates/: categorize_food_template
be/: main.py  pyproject.toml  requirements.txt
docker/: Dockerfile.fastapi  Dockerfile.postgres  Dockerfile.streamlit  init.sql
fe/: app.py  pyproject.toml  requirements.txt
